--- a/Bulk Team Assistant/Properties/Resources.resx
+++ b/Bulk Team Assistant/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="Command_Redo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Command-Redo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
